core/tests/ui/mast_forest_immutable/debug_info_mut.rs
use miden_core::mast::MastForest;

fn main() {
    let mut forest = MastForest::new();
    let _debug_info = forest.debug_info_mut();
}
